# webp2webm

./: .gitignore  LICENSES.json  README.md  pyproject.toml
webp2webm/: convert_and_resize.py  main.py
