[tool.poetry]
name = "webp2webm"
version = "0.1.0"
description = ""
authors = ["vinnom <vinnom.2d@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
moviepy = "^1.0.3"
imageio = "^2.34.1"
pyav = "^12.0.5"


[tool.poetry.group.dev.dependencies]
pipreqs = "^0.5.0"
licensecheck = "^2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
